# pdf-rag-langchain-v2

./: .gitignore  README.md  pyproject.toml
pdf_rag_langchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: chat.py  ingest.py
src/chains/: rag_chain.py
src/config/: settings.py
src/document_loader/: pdf_loader.py
src/document_processor/: text_splitter.py
src/embeddings/: embedding_manager.py
src/llm/: ollama_client.py
src/memory/: conversation_memory.py
src/prompts/: rag_prompt.py
src/retriever/: retriever.py
src/services/: rag_service.py
src/ui/: app.py  chat_window.py  components.py  message.py  sidebar.py  styles.py
src/vector_store/: vector_store_manager.py
