[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-langchain"
version = "1.0.0"
description = "Production-ready PDF RAG application using LangChain, Ollama, FAISS and Streamlit."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Shabana Tamboli" }
]

dependencies = [

    # ===========================
    # LangChain
    # ===========================
    "langchain==1.0.1",
    "langchain-core==1.0.4",
    "langchain-community==0.4.0",
    "langchain-text-splitters==1.0.0",
    "langchain-ollama==1.0.0",

    # ===========================
    # Embeddings
    # ===========================
    "sentence-transformers==5.1.0",
    "transformers==4.53.3",
    "torch>=2.7.0",

    # ===========================
    # Vector DB
    # ===========================
    "faiss-cpu==1.11.0.post1",

    # ===========================
    # PDF Loader
    # ===========================
    "pypdf==5.8.0",

    # ===========================
    # UI
    # ===========================
    "streamlit==1.46.1",

    # ===========================
    # Environment
    # ===========================
    "python-dotenv==1.1.1",

    # ===========================
    # Utilities
    # ===========================
    "numpy==2.2.6",
    "pandas==2.3.1",
    "tqdm==4.67.1",
    "rich==14.0.0"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.3",
    "black>=25.1",
    "ruff>=0.12",
    "isort>=6.0",
    "mypy>=1.17"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.setuptools]
packages = ["src"]